[package]
name = "ryor"
version = "0.1.0"
edition = "2024"

[build]
target = "target.json"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.11.10"
volatile= "0.6.1"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.10.0"
x86_64 = "0.15.2"
uart_16550 = "0.3.2"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio","-display", "none"]
test-success-exit-code = 33
test-timeout = 300
